// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> error renders 1`] = `
<fieldset
  aria-describedby="fieldset-1-error"
  id="fieldset-1"
>
  <div>
    <input
      aria-labelledby="input-1-label"
      id="input-1"
      name="group"
      type="radio"
      value="foo"
    />
    <label
      for="input-1"
      id="input-1-label"
    >
      Foo
    </label>
  </div>
  <span
    id="fieldset-1-error"
    role="alert"
  >
    Error
  </span>
</fieldset>
`;

exports[`<RadioGroup /> help renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <span>
    Help
  </span>
  <div>
    <input
      aria-labelledby="input-1-label"
      id="input-1"
      name="group"
      type="radio"
      value="foo"
    />
    <label
      for="input-1"
      id="input-1-label"
    >
      Foo
    </label>
  </div>
</fieldset>
`;

exports[`<RadioGroup /> legend renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <legend>
    Legend
  </legend>
  <div>
    <input
      aria-labelledby="input-1-label"
      id="input-1"
      name="group"
      type="radio"
      value="foo"
    />
    <label
      for="input-1"
      id="input-1-label"
    >
      Foo
    </label>
  </div>
</fieldset>
`;

exports[`<RadioGroup /> renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <div>
    <input
      aria-labelledby="input-1-label"
      id="input-1"
      name="group"
      type="radio"
      value="foo"
    />
    <label
      for="input-1"
      id="input-1-label"
    >
      Foo
    </label>
  </div>
</fieldset>
`;
